--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ APP_SECRET=213951b9a43ea24671eb23926db0104b
 DATABASE_URL="mysql://root:root@127.0.0.1:8889/bijouterie?serverVersion=5.7"
 #DATABASE_URL="postgresql://root:root@127.0.0.1:8889/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
